[gd_scene load_steps=9 format=3 uid="uid://8xc2djp24y40"]

[ext_resource type="Script" path="res://gui/panels/PreviewPanel.gd" id="1_iu5lk"]
[ext_resource type="Shader" path="res://gui/panels/PlasticPanel.gdshader" id="2_mypj1"]
[ext_resource type="PackedScene" uid="uid://kvxy6miofpxj" path="res://gui/components/KnobControl.tscn" id="3_1mn17"]
[ext_resource type="PackedScene" uid="uid://diuy5hd43hen1" path="res://gui/components/PreviewArea.tscn" id="3_80051"]
[ext_resource type="PackedScene" uid="uid://gprht0fu6hyh" path="res://gui/components/GlowButton.tscn" id="4_6wcbg"]
[ext_resource type="ButtonGroup" uid="uid://d0pkexvqrisnr" path="res://gui/panels/preview_mode_buttons.tres" id="5_esah6"]
[ext_resource type="PackedScene" uid="uid://c8ld4mgspflab" path="res://gui/components/PianoRoll.tscn" id="6_n0eq7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i1p27"]
resource_local_to_scene = true
shader = ExtResource("2_mypj1")
shader_parameter/size = Vector2(768, 226)
shader_parameter/light_intensity = 0.0
shader_parameter/light_smoothness = 0.003
shader_parameter/light_inverted = 0
shader_parameter/border_width = 0
shader_parameter/border_smoothness = 0.05
shader_parameter/bolt_offset = Vector2(11, 11)
shader_parameter/bolt_scale = 10.0
shader_parameter/bolt_size = 0.45
shader_parameter/bolt_smoothness = 0.07
shader_parameter/bolt_thickness = 0.25
shader_parameter/bolt_visibility = 0.25
shader_parameter/bolt_shine_offset = 21.0
shader_parameter/bolt_shine_strength = 7.0
shader_parameter/bolt_shine_reduction = 2.5

[node name="PreviewPanel" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 192.0
grow_horizontal = 2
theme_type_variation = &"PreviewPanel"
script = ExtResource("1_iu5lk")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_i1p27")
layout_mode = 2

[node name="Content" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Layout" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="PreviewBox" type="VBoxContainer" parent="Content/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewArea" parent="Content/Layout/PreviewBox" instance=ExtResource("3_80051")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewModes" type="HBoxContainer" parent="Content/Layout/PreviewBox"]
layout_mode = 2

[node name="SpectrumButton" parent="Content/Layout/PreviewBox/PreviewModes" instance=ExtResource("4_6wcbg")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
button_pressed = true
button_group = ExtResource("5_esah6")
text = "1"
off_color = Color(0.109877, 0.0998807, 0.147812, 1)
on_color = Color(0.157781, 0.297129, 0.510406, 1)

[node name="WaveButton" parent="Content/Layout/PreviewBox/PreviewModes" instance=ExtResource("4_6wcbg")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
button_group = ExtResource("5_esah6")
text = "2"
off_color = Color(0.109877, 0.0998807, 0.147812, 1)
on_color = Color(0.157781, 0.297129, 0.510406, 1)

[node name="Controls" type="VBoxContainer" parent="Content/Layout"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PreviewButton" parent="Content/Layout/Controls" instance=ExtResource("4_6wcbg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 54)
layout_mode = 2
toggle_mode = false
text = "BLAM!"
off_color = Color(0.136711, 0.0804561, 0.00542678, 1)
on_color = Color(0.760784, 0.521569, 0.121569, 1)
force_glow = true

[node name="LengthKnob" parent="Content/Layout/Controls" instance=ExtResource("3_1mn17")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PianoRoll" parent="Content/Layout/Controls" instance=ExtResource("6_n0eq7")]
unique_name_in_owner = true
layout_mode = 2
